[package]
name = "tilejson"
version = "0.2.2"
description = "Library for serializing the TileJSON file format"
authors = ["Stepan Kuzmin <to.stepan.kuzmin@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tilejson"
homepage = "https://github.com/Orbit-GT-Belgium/tilejson"
repository = "https://github.com/Orbit-GT-Belgium/tilejson"
readme = "README.md"
keywords = ["mapbox", "tilejson", "serde"]

[badges]
travis-ci = { repository = "Orbit-GT-Belgium/tilejson" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
